@@ -28,6 +28,11 @@ specified outside a target.
     <td valign="top">source file</td>
     <td valign="top" align="center">Yes</td>
   </tr>
+  <tr>
+    <td valign="top">encoding</td>
+    <td valign="top">encoding to use when loading the file</td>
+    <td align="center" valign="top">No</td>
+  </tr>
 </table>
 <p>
 The LoadProperties task supports nested <a href="../CoreTypes/filterchain.html">
